--- a/src/sass/blocks/promo.scss
+++ b/src/sass/blocks/promo.scss
@@ -2,7 +2,8 @@
 
 .promo {
   height: 100vh;
-  padding-top: 220px;
+  padding-top: 240px;
+  overflow: hidden;
   background-image: url(/src/img/bg.png);
   background-repeat: no-repeat;
   background-size: cover;
@@ -11,18 +12,31 @@
   &__wrapper {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 30px;
+    gap: 60px;
   }
 
-  &__text{
+  &__text {
     position: relative;
   }
 
   &__title {
+    display: inline-block;
+    position: relative;
     font-weight: 500;
     font-size: 23px;
     line-height: 24px;
     color: $blue;
+    &::after {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 100%;
+      transform: translate(30%, -10%);
+      content: "";
+      width: 129px;
+      height: 29px;
+      background-image: url(/src/img/arrow-promo.svg);
+    }
   }
 
   &__subtitle {
@@ -49,25 +63,133 @@
     color: $violet-muted;
   }
 
-  &__button{
+  &__button {
     margin-top: 36px;
   }
 
-  &__cross{
+  &__cross {
     position: absolute;
-    bottom: 0;
     left: 50%;
     transform: translate(-50%, 50%);
     animation: rotating 10s linear infinite;
   }
+
+  &__boy-container {
+    position: relative;
+  }
+
+  &__hole {
+    width: 518.5px;
+  }
+
+  &__boy {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 2;
+    transform: translate(-10%, -20%);
+    animation: boy 1s linear;
+  }
+
+  &__joy {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(9%, -20%);
+    opacity: 0;
+    animation: joy 1s linear 1s forwards;
+  }
+
+  &__card {
+    display: flex;
+    gap: 10px;
+    padding: 18px 16px;
+    position: absolute;
+    z-index: 3;
+    width: 212px;
+    height: 95px;
+    background-color: $bg-card;
+    box-shadow: 0px 10px 20px 0px #eb838266;
+    border-radius: 10px;
+
+    &-glasses {
+      top: -25%;
+      left: -20%;
+    }
+
+    &-controller{
+      bottom: 0%;
+      right: -20%;
+    }
+
+    &-description {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    &-title {
+      font-weight: 500;
+      font-size: 10px;
+      line-height: 12px;
+      color: $blue;
+    }
+
+    &-subtitle {
+      font-weight: 700;
+      font-size: 10px;
+      line-height: 10px;
+      color: $color-warm-pink;
+    }
+
+    &-img {
+      min-width: 84px;
+      min-height: 52px;
+      object-fit: contain;
+    }
+
+    &-rate {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    &-review {
+      font-weight: 500;
+      font-size: 8px;
+      line-height: 12px;
+      color: $blue;
+    }
+  }
 }
 
+@keyframes joy {
+  0% {
+    transform: translate(9%, -20%) scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(9%, -20%) scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes boy {
+  0% {
+    transform: translate(-10%, 0%);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(-10%, -20%);
+    opacity: 1;
+  }
+}
 
 @keyframes rotating {
-    0% {
-        transform: translate(-50%, 50%) rotate(0deg);
-    }
-    100%{
-        transform: translate(-50%, 50%) rotate(360deg);
-    }
+  0% {
+    transform: translate(-50%, 50%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, 50%) rotate(360deg);
+  }
 }
