--- a/src/sass/base/variables.scss
+++ b/src/sass/base/variables.scss
@@ -2,3 +2,10 @@ $blue: #446381;
 $color-warm-pink: #EB8382;
 $violet-muted: #826F8C;
 $bg-card: #ffffff33;
+
+
+$breakpoint-large-desktop: 1440px;
+$breakpoint-desktop: 1200px;
+$breakpoint-laptop: 1024px;       
+$breakpoint-tablet: 768px;        
+$breakpoint-mobile: 480px;
