--- a/src/sass/base/mixins.scss
+++ b/src/sass/base/mixins.scss
@@ -1,11 +1,14 @@
-@mixin button {
+@mixin button-a {
   padding: 0 15px;
   height: 50px;
-  background: linear-gradient(94.66deg, #4499d9 17.46%, #7367be 87.77%);
+  display: grid;
+  place-items: center;
   font-weight: 500;
   font-size: 18px;
   line-height: 24px;
   border: none;
   border-radius: 25px;
+  text-decoration: none;
   color: #fff;
 }
+
