--- a/src/sass/ui/buttons.scss
+++ b/src/sass/ui/buttons.scss
@@ -1,7 +1,18 @@
 @use "/src/sass/base/mixins.scss" as *;
 
-
-.button-start{
-    @include button;
-    width: 180px;
+.button-start {
+  @include button-a;
+  width: 180px;
+  background: linear-gradient(
+    94.66deg,
+    #4499d9 0.46%,
+    #7367be 31.77%,
+    #4499d9 99%
+  );
+  background-size: 200%;
+  transition: all .3s linear;
+  &:hover {
+    background-position: -100%;
+    box-shadow: 0px 5px 10px 1px #1f131366;
+  }
 }
