add responsive header and create burger menu

--- a/src/sass/base/basic.scss
+++ b/src/sass/base/basic.scss
@@ -9,6 +9,11 @@ html{
     font-family: "Josefin Sans", sans-serif;
 }
 
+.no-scroll {
+    overflow: hidden;
+    height: 100vh; /* фиксируем высоту */
+  }
+
 .container{
     max-width: 1160px;
     margin: 0 auto;
