add glasses section and ui text

--- a/src/sass/base/variables.scss
+++ b/src/sass/base/variables.scss
@@ -2,6 +2,7 @@ $blue: #446381;
 $color-warm-pink: #EB8382;
 $violet-muted: #826F8C;
 $bg-card: #ffffff33;
+$bg-main: #ffd9c3;
 
 
 $breakpoint-large-desktop: 1440px;
