--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,6 +2,8 @@
 @import "/src/sass/base/basic.scss";
 
 @import "/src/sass/ui/buttons.scss";
+@import "/src/sass/ui/text.scss";
 
 @import "/src/sass/blocks/header.scss";
 @import "/src/sass/blocks/promo.scss";
+@import "/src/sass/blocks/glasses.scss";
