add console section

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,3 +7,4 @@
 @import "/src/sass/blocks/header.scss";
 @import "/src/sass/blocks/promo.scss";
 @import "/src/sass/blocks/glasses.scss";
+@import "/src/sass/blocks/console.scss";
