--- a/src/sass/ui/buttons.scss
+++ b/src/sass/ui/buttons.scss
@@ -1,6 +1,6 @@
 @use "/src/sass/base/mixins.scss" as *;
 
-.button-start {
+.button {
   @include button-a;
   width: 180px;
   background: linear-gradient(
@@ -10,7 +10,7 @@
     #4499d9 99%
   );
   background-size: 200%;
-  transition: all .3s linear;
+  transition: all 0.3s linear;
   &:hover {
     background-position: -100%;
     box-shadow: 0px 5px 10px 1px #1f131366;
