add pricing section

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,3 +8,4 @@
 @import "/src/sass/blocks/promo.scss";
 @import "/src/sass/blocks/glasses.scss";
 @import "/src/sass/blocks/console.scss";
+@import "/src/sass/blocks/pricing.scss";
