--- a/src/sass/base/variables.scss
+++ b/src/sass/base/variables.scss
@@ -2,7 +2,8 @@ $blue: #446381;
 $color-warm-pink: #EB8382;
 $violet-muted: #826F8C;
 $bg-card: #ffffff33;
-$bg-main: #ffd9c3;
+$bg-main: #FFE6D7;
+$bg-pricing-card: #FBDACF;
 
 
 $breakpoint-large-desktop: 1440px;
