add responsive layout for pricing section and card selection logic

--- a/src/sass/base/variables.scss
+++ b/src/sass/base/variables.scss
@@ -4,6 +4,7 @@ $violet-muted: #826F8C;
 $bg-card: #ffffff33;
 $bg-main: #FFE6D7;
 $bg-pricing-card: #FBDACF;
+$pricing-card-selected: linear-gradient(#446381, #826F8C);
 
 
 $breakpoint-large-desktop: 1440px;
