add footer section and animation for logo

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import "/src/sass/libs/modern-normalize.min.css";
+@import "/src/sass/libs/fontello.css";
 @import "/src/sass/base/basic.scss";
 
 @import "/src/sass/ui/buttons.scss";
@@ -9,3 +10,4 @@
 @import "/src/sass/blocks/glasses.scss";
 @import "/src/sass/blocks/console.scss";
 @import "/src/sass/blocks/pricing.scss";
+@import "/src/sass/blocks/footer.scss";
