--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -15,6 +15,10 @@
 
   &__logo-link {
     text-decoration: none;
+    transition: all .3s ease-in;
+    &:hover{
+      transform: scale(1.05);
+    }
   }
 
   &__logo {
