add background for header and nav

--- a/src/sass/base/variables.scss
+++ b/src/sass/base/variables.scss
@@ -2,6 +2,8 @@ $blue: #446381;
 $color-warm-pink: #EB8382;
 $violet-muted: #826F8C;
 $bg-card: #ffffff33;
+$bg-header: #ffffffaa;
+$bg-nav: #000000dd;
 $bg-main: #FFE6D7;
 $bg-pricing-card: #FBDACF;
 $pricing-card-selected: linear-gradient(#446381, #826F8C);
